firs block fixed

--- a/index.html
+++ b/index.html
@@ -132,30 +132,21 @@ Aliquam id pulvinar sapien. Proin sagittis magna et orci vehicula interdum vel i
             
                 <div id="contact_link" class="main_contact">KAPCSOLAT
                     <div class="main_program_schedul">
-                        <table class="tworow">
-                            <tr>
-                                <td style="font-weight:bold;">Kis József</td>
-                            </tr>
-                            <tr>
-                                <td>jozsi@gmail.com</td>
-                            </tr>
-                            <tr>
-                                <td>+36 30 1234567</td>
-                            </tr>
-                        </table>
-                        <div class="avatar"><img src="img/avatar.jpg" /></div>
-                        <table class="tworow">
-                            <tr>
-                                <td style="font-weight:bold;">Kis Péter</td>
-                            </tr>
-                            <tr>
-                                <td>peti@gmail.com</td>
-                            </tr>
-                            <tr>
-                                <td>+36 30 1234567</td>
-                            </tr>
-                        </table>
-                         <div class="avatar"><img src="img/avatar.jpg" /></div>
+                        <div class="main_contact">
+
+                            <div class="avatar"><img src="img/avatar.jpg" /></div>
+                                <p>Kis József</p>
+                                <p>jozsi@gmail.com</p>
+                                <p>+36 30 1234567</p>
+
+                        </div>
+                        <div class="main_contact">
+                            <div class="avatar"><img src="img/avatar.jpg" /></div>
+                                <p>Kis József</p>
+                                <p>jozsi@gmail.com</p>
+                                <p>+36 30 1234567</p>
+
+                        </div>
                     </div>
                 </div>
             
