calendar part done

--- a/index.html
+++ b/index.html
@@ -33,30 +33,45 @@
                         </div>
                     </div>
                     <div class="main_program_schedul">
-                            <span>18:00 Kutya</span>
-                            <span>20:00 Macska</span>
-                            <span>22:00 Szamár</span>
-                            <span>18:00 Kutya</span>
-                            <span>20:00 Macska</span>
-                            <span>22:00 Szamár</span>
-                            <span>18:00 Kutya</span>
-                            <span>20:00 Macska</span>
-                            <span>22:00 Szamár</span>
+                        <div class="calendar-day">
+                            <p><span class="yellow">18:00</span> Kutya</p>
+                            <p><span class="yellow">20:00</span> Macska</p>
+                            <p><span class="yellow">22:00</span> Szamár</p>
+                        </div>
+                        <div class="calendar-day">
+                            <p><span class="yellow">18:00</span> Kutya</p>
+                            <p><span class="yellow">20:00</span> Macska</p>
+                            <p><span class="yellow">22:00</span> Szamár</p>
+                        </div>
+                        <div class="calendar-day">
+                            <p><span class="yellow">18:00</span> Kutya</p>
+                            <p><span class="yellow">20:00</span> Macska</p>
+                            <p><span class="yellow">22:00</span> Szamár</p>
+                        </div>
                     </div>
                     <div class="main_program_line, line-color-yellow">
                         <div class="content_holder">
-                            <span class="day_indicator">csütörtük</span>
+                            <span class="day_indicator">csütörtök</span>
                             <span class="day_indicator">péntek</span>
                             <span class="day_indicator">szombat</span>
                         </div>
                     </div>
                     <div class="main_program_schedul">
-                        <span>18:00 Kutya</span>
-                        <span>20:00 Macska</span>
-                        <span>22:00 Szamár</span>
-                        <span>18:00 Kutya</span>
-                        <span>20:00 Macska</span>
-                        <span>22:00 Szamár</span>
+                        <div class="calendar-day">
+                            <p><span class="yellow">18:00</span> Kutya</p>
+                            <p><span class="yellow">20:00</span> Macska</p>
+                            <p><span class="yellow">22:00</span> Szamár</p>
+                        </div>
+                        <div class="calendar-day">
+                            <p><span class="yellow">18:00</span> Kutya</p>
+                            <p><span class="yellow">20:00</span> Macska</p>
+                            <p><span class="yellow">22:00</span> Szamár</p>
+                        </div>
+                        <div class="calendar-day">
+                            <p><span class="yellow">18:00</span> Kutya</p>
+                            <p><span class="yellow">20:00</span> Macska</p>
+                            <p><span class="yellow">22:00</span> Szamár</p>
+                        </div>
                     </div>
                 </div>
             
