DONE (first iteration)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="upper_menu">
     <a href=#program_link class="links"><span class="text">programok</span></a>
     <a href=#ticket_link class="links"><span class="text">jegyek</span></a>
-    <a href=#info_link class="links"><span class="text">info</span></a>
+    <a href=#info_link class="links"><span class="text">körök</span></a>
     <a href=#contact_link class="links"><span class="text">kapcsolat</span></a>
 </div>
 
@@ -39,9 +39,11 @@
 
                     <p><span class="yellow">21:00</span> Könnyűzenei program</p>
 
-                    <p><span class="yellow">22:00</span> Bűvészkör</p>
+                    <p><span class="yellow">21:30</span> Silentio Kórus</p>
 
-                    <p><span class="yellow">22:30</span> Silentio Kórus</p>
+                    <p><span class="yellow">22:30</span> Bűvészkör</p>
+
+                    <p><span class="yellow">23:00</span> Könnyűzenei program</p>
                 </div>
                 <div class="calendar-day">
                     <p><span class="yellow">20:30</span> Parkett Klub - Betyár Party</p>
@@ -79,10 +81,8 @@
                     <span class="center-price">Jegyárak</span>
                 </div>
             </div>
-            <div class="main_program_schedul">
-                <div class="tworow">
-                    Bővebb információ hamarosan... kollégista pénztárcabarát :)
-                </div>
+            <div class="tworow">
+                Bővebb információ hamarosan... kollégista pénztárcabarát :)
             </div>
         </div>
 
@@ -90,7 +90,65 @@
         <div id="info_link" class="main_info, main">
             <div class="title">körök</div>
             <div class="content_holder">
+                <div class="circle-content">
+                    <span class="title">Játszóház</span>
+                    <div class="circle-image" style="background-image: url('img/jatszo.jpg')"></div>
+                    <span>A Schönherz Játszóház fő célja az örülés/m² faktor növelése a kollégiumban. A Kör kulturált szórakozási lehetőséget nyújt mindazok számára, akik társasjátékozni szeretnének, vagy éppen egy kellemes teára vágynak. A játékok kölcsönzésére is lehetőséget biztosítunk.</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">BBK</span>
+                    <div class="circle-image" style="background-image: url('img/bbk.jpg')"></div>
+                    <span>Mindig is érdekelt a bor világa? Vagy szeretnéd tudni, hogyan zajlik egy borkóstoló? Fesztiválhéten a Bor Baráti Kör tart egy gyorstalpaló bevezetést a borkóstolás alapjairól, természetesen, nem a könyvből felolvasva, hanem pár deci rendkívül finom bor kíséretében, szokásunkhoz híven, kollégista áron.</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">SPOT</span>
 
+                    <span>A SPOT a szokásoknak megfelelően idén is az erőforrásait meghazudtolva próbálja a kollégiumi rendezvényeket megörökíteni, ahogy tette a korábbi félévekben is. Ezekről az eseményekről a legjobb, vagy leghangulatosabb képeinket a Fesztiválhét teljes időtartama alatt egy nagyszabású kiállítás keretei közt is megtekinthetitek. Természetesen a körünk nemcsak ezen a területen képviseli magát, a körtagok saját szórakoztatásukra is készítenek fotókat, melyek híven tükrözik sajátos egyéniségüket. A rendezvényfotóink mellett néhány érdekes, izgalmas és kreatív alkotásunkat is megtekinthetitek.</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Local Heroes</span>
+
+                    <span>A szerepjátszó kör 'Magic: The Gathering' kártyajátékkal vár titeket. Hozzátok a saját paklitokat, vagy rakjatok össze egyet a helyszínen az ott lévő rengeteg lapból, és próbáljátok megverni a körös BOSS paklit! Egy biztos: nem lesz egyszerű feladat!</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Kakas</span>
+                    <span>Több mint 2 évtizede a Schönherzesek kedvenc melegszendvicseivel várunk titeket a Fesztivál hét nyitó estéjén is. Vörös fények, vörös asztalterítők, mosolygós pincérek, friss és rengeteg féle melegszendvics. Különleges heti ajánlattal készülünk nektek, melyről érdeklődjetek pincérjeinknél. Találkozzunk vasárnap este 9 órakor a körfolyosón, és nyisd meg velünk te is a Schönherz legemlékezetesebb Fesztiválhetét. </span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">CC</span>
+                    <div class="circle-image" style="background-image: url('img/cc.jpg')"></div>
+                    <span>Péntek este a hét zárásaként gyertek le egy jó kis CC bulira! A fesztiváli hangulat kiteljesédése garantált! Üljetek le egy sörre vagy játszatok egyet a biliárdasztalnál és közben osszátok meg egymással a legjobb sztorikat! Mindehhez a helyszínt és az elengedhetetlen zenét mi biztosítjuk!</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">LaPlace</span>
+                    <div class="circle-image" style="background-image: url('img/laplace.jpg')"></div>
+                    <span>A La'Place Café turmixairól, forrócsokijairól és persze a browniejáról híres, melyeket nyitásainkon, nagyjából hetente, meg is kóstolhattok. Az első szintet ilyenkor megtölti a kávéillat, halk beszélgetések zaja, kellemes zene.. és mi ezt szeretjük, ezért csináljuk ;) A KultúrNight nevű esteken is megjelenik körünk, ahol élő zenekarok szolgáltatják hangulatos aláfestést egy kellemes estéhez. A fesztiválhét alkalmából special edition italokkal várunk titeket egy különleges KultúrNight keretében.</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Bűvészkör</span>
+                    <div class="circle-image" style="background-image: url('img/buvesz.jpg')"></div>
+                    <span>A kör célja, hogy összefogja a bűvészet irtánt érdeklődőket. A gyűléseink során bemutatjuk egymásnak legújabb trükkjeinket, és hasznos tanácsokkal látjuk el egymást a fejlődés érdekében, vagy segítünk az első trükkök megtanulásában azoknak, akik csak most kezdenek el foglalkozni a bűvészettel. Tagjainknak fellépési lehetőséget biztosítunk, legyen szó akár close up, akár színpadi bűvészetről.</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Silentio</span>
+                    <div class="circle-image" style="background-image: url('img/silent.jpg')"></div>
+                    <span>Tavaszi repertoárunk legjavát gyűjtöttük össze Nektek, hogy a koncert szünetében se maradjatok hallgatnivaló nélkül. Érdemes lesz a színpad előtt maradni, a kórusmuzsika kedvelőinek mindenképpen, de akik inkább számítógépes játékokat szeretik, talán még nekik is tartogatunk meglepetéseket.</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Parkett</span>
+                    <div class="circle-image" style="background-image: url('img/parkett.jpg')"></div>
+                    <span>Szívesen betyárkodnál a Fesztivál héten? Szeretnéd ha átjárna az igazi magyaros életérzés? És mindezt közvetlen közeledben, a Schönherz falai között? Akkor gyere, és őrizd velünk hagyományainkat! Idén tavasszal is egy felejthetetlen élőzenés táncházzal várunk! Jó hangulat, közösség és örömteli szórakozás olyan évezredes kincsekkel, mint a magyar muzsika, jó pálinka és pödrött bajusz. A teljesen kezdők se tántorodjanak el, hiszen az este alatt folyamatos táncoktatás segíti az alaplépések elsajátítását!</span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Lanosch</span>
+                    <div class="circle-image" style="background-image: url('img/lanosch.jpg')"></div>
+                    <span></span>
+                </div>
+                <div class="circle-content">
+                    <span class="title">Szakest</span>
+                    <div class="circle-image" style="background-image: url('img/szakest.jpg')"></div>
+                    <span>Érdekel a szakestek története? Érdekel, hogy mik a különbségek a Selmecbányai és a Villanykaros szakest között? Gyere el hozzánk, hozz magaddal nedüt a korsódban (ha nincs korsód az se baj, adunk egyet kölcsön, hogy tudj koccintani velünk) és szívesen mesélünk neked erről a szokásról. Ha csak egyszerűen picit lazítani támad kedved, akkor is gyere el hozzánk, és Cantusaink segítségével kiénekelheted magadból bánatod, vagy csak egyszerűen átadhatod magadat a szakestes hangulatnak.</span>
+                </div>
             </div>
 
 
@@ -99,16 +157,15 @@
                 <div class="main_program_schedul">
                     <div class="main_contact">
 
-                        <div class="avatar"><img src="img/avatar.jpg"/><span>Antal János Benjamin - Kovi</span></div>
-                        <div class="avatar"><img src="img/avatar.jpg"/><span>antal.janos.benjamin(kukac)gmail.com</span>
-                        </div>
-                        <div class="avatar"><img src="img/avatar.jpg"/><span>+3630/205-4546</span></div>
+                        <div class="avatar"><img src="img/kovi.jpg"/><span>Antal János Benjamin - Kovi</span></div>
+                        <div><img src="img/mail.png"/><span>antal.janos.benjamin(kukac)gmail.com</span></div>
+                        <div><img src="img/phone.png"/><span>+3630/205-4546</span></div>
 
                     </div>
                     <div class="main_contact">
-                        <div class="avatar"><img src="img/avatar.jpg"/><span>Bozsódi Márton - Marci</span></div>
-                        <div class="avatar"><img src="img/avatar.jpg"/><span>martonbozsodi(kukac)gmail.com</span></div>
-                        <div class="avatar"><img src="img/avatar.jpg"/><span>+3620/418-8847</span></div>
+                        <div class="avatar"><img src="img/marci.jpg"/><span>Bozsódi Márton - Marci</span></div>
+                        <div><img src="img/mail.png"/><span>martonbozsodi(kukac)gmail.com</span></div>
+                        <div><img src="img/phone.png"/><span>+3620/418-8847</span></div>
 
                     </div>
                 </div>
@@ -120,7 +177,10 @@
 </div>
 
 <div class="footer">
-    <div class="footer_content">SDS</div>
+    <div class="footer_content">
+        <img src="img/schlogo.png"/>
+        <img src="img/sdslogo.png"/>
+    </div>
 </div>
 </body>
 </html>
