--- a/index.html
+++ b/index.html
@@ -96,56 +96,58 @@
                     <span>A Schönherz Játszóház fő célja az örülés/m² faktor növelése a kollégiumban. A Kör kulturált szórakozási lehetőséget nyújt mindazok számára, akik társasjátékozni szeretnének, vagy éppen egy kellemes teára vágynak. A játékok kölcsönzésére is lehetőséget biztosítunk.</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">BBK</span>
+                    <span class="title">Bor Baráti Kör</span>
                     <div class="circle-image" style="background-image: url('img/bbk.jpg')"></div>
                     <span>Mindig is érdekelt a bor világa? Vagy szeretnéd tudni, hogyan zajlik egy borkóstoló? Fesztiválhéten a Bor Baráti Kör tart egy gyorstalpaló bevezetést a borkóstolás alapjairól, természetesen, nem a könyvből felolvasva, hanem pár deci rendkívül finom bor kíséretében, szokásunkhoz híven, kollégista áron.</span>
                 </div>
                 <div class="circle-content">
                     <span class="title">SPOT</span>
-
+                    <div class="circle-image" style="background-image: url('img/spot.jpg')"></div>
                     <span>A SPOT a szokásoknak megfelelően idén is az erőforrásait meghazudtolva próbálja a kollégiumi rendezvényeket megörökíteni, ahogy tette a korábbi félévekben is. Ezekről az eseményekről a legjobb, vagy leghangulatosabb képeinket a Fesztiválhét teljes időtartama alatt egy nagyszabású kiállítás keretei közt is megtekinthetitek. Természetesen a körünk nemcsak ezen a területen képviseli magát, a körtagok saját szórakoztatásukra is készítenek fotókat, melyek híven tükrözik sajátos egyéniségüket. A rendezvényfotóink mellett néhány érdekes, izgalmas és kreatív alkotásunkat is megtekinthetitek.</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">Local Heroes</span>
-
+                    <span class="title">Local Heroes Szerepjátszó Kör</span>
+                    <div class="circle-image" style="background-image: url('img/local.png'); background-size: 90%"></div>
                     <span>A szerepjátszó kör 'Magic: The Gathering' kártyajátékkal vár titeket. Hozzátok a saját paklitokat, vagy rakjatok össze egyet a helyszínen az ott lévő rengeteg lapból, és próbáljátok megverni a körös BOSS paklit! Egy biztos: nem lesz egyszerű feladat!</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">Kakas</span>
+                    <span class="title">Vörös Kakas Fogadó</span>
+                    <div class="circle-image" style="background-image: url('img/kakas.jpg')"></div>
                     <span>Több mint 2 évtizede a Schönherzesek kedvenc melegszendvicseivel várunk titeket a Fesztivál hét nyitó estéjén is. Vörös fények, vörös asztalterítők, mosolygós pincérek, friss és rengeteg féle melegszendvics. Különleges heti ajánlattal készülünk nektek, melyről érdeklődjetek pincérjeinknél. Találkozzunk vasárnap este 9 órakor a körfolyosón, és nyisd meg velünk te is a Schönherz legemlékezetesebb Fesztiválhetét. </span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">CC</span>
+                    <span class="title">ClubCeption</span>
                     <div class="circle-image" style="background-image: url('img/cc.jpg')"></div>
                     <span>Péntek este a hét zárásaként gyertek le egy jó kis CC bulira! A fesztiváli hangulat kiteljesédése garantált! Üljetek le egy sörre vagy játszatok egyet a biliárdasztalnál és közben osszátok meg egymással a legjobb sztorikat! Mindehhez a helyszínt és az elengedhetetlen zenét mi biztosítjuk!</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">LaPlace</span>
+                    <span class="title">La'Place Café</span>
                     <div class="circle-image" style="background-image: url('img/laplace.jpg')"></div>
                     <span>A La'Place Café turmixairól, forrócsokijairól és persze a browniejáról híres, melyeket nyitásainkon, nagyjából hetente, meg is kóstolhattok. Az első szintet ilyenkor megtölti a kávéillat, halk beszélgetések zaja, kellemes zene.. és mi ezt szeretjük, ezért csináljuk ;) A KultúrNight nevű esteken is megjelenik körünk, ahol élő zenekarok szolgáltatják hangulatos aláfestést egy kellemes estéhez. A fesztiválhét alkalmából special edition italokkal várunk titeket egy különleges KultúrNight keretében.</span>
                 </div>
                 <div class="circle-content">
                     <span class="title">Bűvészkör</span>
-                    <div class="circle-image" style="background-image: url('img/buvesz.jpg')"></div>
+                    <div class="circle-image" style="background: url('img/buvesz.jpg') 50% 10%; background-size: cover"></div>
                     <span>A kör célja, hogy összefogja a bűvészet irtánt érdeklődőket. A gyűléseink során bemutatjuk egymásnak legújabb trükkjeinket, és hasznos tanácsokkal látjuk el egymást a fejlődés érdekében, vagy segítünk az első trükkök megtanulásában azoknak, akik csak most kezdenek el foglalkozni a bűvészettel. Tagjainknak fellépési lehetőséget biztosítunk, legyen szó akár close up, akár színpadi bűvészetről.</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">Silentio</span>
+                    <span class="title">Silentio Kórus</span>
                     <div class="circle-image" style="background-image: url('img/silent.jpg')"></div>
                     <span>Tavaszi repertoárunk legjavát gyűjtöttük össze Nektek, hogy a koncert szünetében se maradjatok hallgatnivaló nélkül. Érdemes lesz a színpad előtt maradni, a kórusmuzsika kedvelőinek mindenképpen, de akik inkább számítógépes játékokat szeretik, talán még nekik is tartogatunk meglepetéseket.</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">Parkett</span>
+                    <span class="title">Parkett Klub</span>
                     <div class="circle-image" style="background-image: url('img/parkett.jpg')"></div>
                     <span>Szívesen betyárkodnál a Fesztivál héten? Szeretnéd ha átjárna az igazi magyaros életérzés? És mindezt közvetlen közeledben, a Schönherz falai között? Akkor gyere, és őrizd velünk hagyományainkat! Idén tavasszal is egy felejthetetlen élőzenés táncházzal várunk! Jó hangulat, közösség és örömteli szórakozás olyan évezredes kincsekkel, mint a magyar muzsika, jó pálinka és pödrött bajusz. A teljesen kezdők se tántorodjanak el, hiszen az este alatt folyamatos táncoktatás segíti az alaplépések elsajátítását!</span>
                 </div>
                 <div class="circle-content">
                     <span class="title">Lanosch</span>
                     <div class="circle-image" style="background-image: url('img/lanosch.jpg')"></div>
-                    <span></span>
+                    <span>Ha imádod a videójátékokat, szereted a sört, vagy csak szeretnél egy estét szórakozással a barátaid társaságában eltölteni, akkor itt a helyed köztünk! A Fesztiválhét keretében egy fergeteges LAN-partyban vehetsz részt!
+Ne feledd: "lanni vagy nem lanni"</span>
                 </div>
                 <div class="circle-content">
-                    <span class="title">Szakest</span>
+                    <span class="title">VIK Szakestély</span>
                     <div class="circle-image" style="background-image: url('img/szakest.jpg')"></div>
                     <span>Érdekel a szakestek története? Érdekel, hogy mik a különbségek a Selmecbányai és a Villanykaros szakest között? Gyere el hozzánk, hozz magaddal nedüt a korsódban (ha nincs korsód az se baj, adunk egyet kölcsön, hogy tudj koccintani velünk) és szívesen mesélünk neked erről a szokásról. Ha csak egyszerűen picit lazítani támad kedved, akkor is gyere el hozzánk, és Cantusaink segítségével kiénekelheted magadból bánatod, vagy csak egyszerűen átadhatod magadat a szakestes hangulatnak.</span>
                 </div>
