--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
 
                     <p><span class="yellow">20:00</span> La'Place Café, Bor Baráti Kör, Játszóház</p>
 
-                    <p><span class="yellow">21:00</span> Könnyűzenei program</p>
-
-                    <p><span class="yellow">21:30</span> Silentio Kórus</p>
+                    <p><span class="yellow">21:00</span> Alterego zenekar</p>
 
                     <p><span class="yellow">22:30</span> Bűvészkör</p>
 
-                    <p><span class="yellow">23:00</span> Könnyűzenei program</p>
                 </div>
                 <div class="calendar-day">
                     <p><span class="yellow">20:30</span> Parkett Klub - Betyár Party</p>
                 </div>
                 <div class="calendar-day">
-                    <p><span class="yellow">22:00</span> Koncert, részletek hamarosan</p>
+                    <p><span class="yellow">21:00</span> Koktélest</p>
                 </div>
             </div>
             <div class="main_program_line, line-color-yellow">
@@ -62,9 +59,10 @@
                 <div class="calendar-day">
                     <p><span class="yellow">19:00</span> Lanosch, Játszóház, Local Heroes Szerepjátszó Kör, Bor Baráti
                         Kör - borkóstoló, részletek hamarosan</p>
+                    <p><span class="yellow">21:00</span> ClubCeption</p>
                 </div>
                 <div class="calendar-day">
-                    <p><span class="yellow">20:00</span> VIK Szakestély - történelem óra</p>
+                    <p><span class="yellow">20:30</span> VIK Szakestély - történelem óra</p>
 
                     <p><span class="yellow">21:00</span> ClubCeption - az este folyamán: Bűvészkör</p>
                 </div>
